nextcloud-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
  name: nextcloud-svc
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: nextcloud-dep
