nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  labels:
    app: nextcloud
spec:
  rules:
  - host: nico-nextcloud.com
    http:
      paths:
      - path: /
        pathType: Prefix
        path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-svc
            port:
              name: http
